Fix/hero horizontal scroll (#1051)
* style(hero): fix overflow isse caused by routing-hero

* style(hero): remove unnecassary change

--- a/components/Hero/src/index.scss
+++ b/components/Hero/src/index.scss
@@ -264,7 +264,7 @@
       );
       content: "";
       height: 100%;
-      width: 100%;
+      width: calc(100% - var(--denhaag-hero-routing-shape-left, 0));
       top: 0;
       left: var(--denhaag-hero-routing-shape-left, 0);
       position: absolute;
